--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>hello</h1>
+html>
+         <head> 
+            
+          <title>代码3</title>
+         </head>
+         <body bgcolor="">
+
+	<div style="width:1120px;height:610px;background-color:orange;margin-left:400px;margin-top:200px;">
+
+	</div>
+        </body>
+</html>
