--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<h1>hi</h1>
+<html>
+         <head> 
+
+              <title>颜色代码</title>
+        </head>
+       <body bgcolor="#c433ff">
+                 
+                  <b>代码</b>
+                  <u>代码</u>
+                  <i>代码</i>
+                  <s>代码</s>
+                <u><b><s>代码代码代码代码代码代码</s></b></u>
+                <center>
+                <form action="file:///C:/Users/1/Desktop/color.html"method="get/post">
+                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号<input type="text"><p>
+                            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp密码<input type="password"><p>
+                            确认密码<input type="password"><p>
+                            <input type="checkbox">我已阅读并同意<p>
+                            <button style="width:180px;background-color:#FFF000;">注册</button><p>
+
+              
+               男<input type="radio" name="aa" >
+               女<input type="radio" name="aa"><p>
+              <select>
+                            <option>年<option>
+                            <option>2024<option>
+                           <option>2023<option>
+            </select>
+            <select>
+                            <option>月<option>
+                            <option>1<option>
+                           <option>2<option>
+            </select>
+             <select>
+                            <option>日<option>
+                            <option>1<option>
+                           <option>2<option>
+            </select><p>
+
+        </center>
+
+
+
+</body>
+
+
+
+
+</html>
